<resources>
    <string name="app_name" translatable="false">FamilyCalendar</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="title">Title</string>
    <string name="enter_name">Name of the event</string>
    <string name="object">Object</string>
    <string name="type">Type</string>
    <string name="person">Person</string>
    <string name="enter_object">Object of the event</string>
    <string name="date">Date</string>
    <string name="all_day">All day</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="default_date" translatable="false">%1$02d/%2$02d/%3$d</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="new_event">Event</string>
    <string name="new_birthday">Birthday</string>
    <string name="new_contact">Contact</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="name_of_the_contact">Name of the contact</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="phone_number">Phone number</string>
    <string name="last_name_of_contact">Last name of the contact</string>
    <string name="first_name_of_contact">First name of the contact</string>
    <string name="event_period" translatable="false">%1$s - %2$s</string>
    <string name="contact_name" translatable="false">%1$s %2$s</string>
    <string name="family">Family</string>
    <string name="personnal">Personnal</string>
    <string name="professionnal">Professionnal</string>
    <string name="search_contact">Search a contact</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>
    <string name="birthday">Birthday</string>
    <string name="bday_title1">%1$s\'s birthday</string>
    <string name="bday_title2">%1$s\'s birthday</string>
</resources>