<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".addevent.AddEventFragment">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                app:layout_constraintBottom_toBottomOf="@+id/title_box"
                app:layout_constraintEnd_toStartOf="@+id/title_box"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/title_box" />

            <EditText
                android:id="@+id/title_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/object_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/object"
                app:layout_constraintBottom_toBottomOf="@+id/object_box"
                app:layout_constraintEnd_toStartOf="@+id/object_box"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/object_box" />

            <EditText
                android:id="@+id/object_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/enter_object"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_box" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                app:layout_constraintBottom_toBottomOf="@+id/date_box"
                app:layout_constraintEnd_toStartOf="@+id/date_box"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/date_box" />

            <EditText
                android:id="@+id/date_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/object_box" />

            <CheckBox
                android:id="@+id/all_day_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/all_day"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/from_picker" />

            <TextView
                android:id="@+id/from_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                app:layout_constraintBottom_toBottomOf="@+id/to_text"
                app:layout_constraintEnd_toEndOf="@+id/from_picker"
                app:layout_constraintStart_toStartOf="@id/from_picker"
                app:layout_constraintTop_toTopOf="@+id/to_text" />

            <TimePicker
                android:id="@+id/from_picker"
                style="@android:style/Widget.Material.Light.TimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:timePickerMode="spinner"
                app:layout_constraintEnd_toStartOf="@+id/to_picker"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/from_text" />

            <TextView
                android:id="@+id/to_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/to"
                app:layout_constraintEnd_toEndOf="@+id/to_picker"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/to_picker"
                app:layout_constraintTop_toBottomOf="@+id/date_box" />

            <TimePicker
                android:id="@+id/to_picker"
                style="@android:style/Widget.Material.Light.TimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                app:layout_constraintBottom_toBottomOf="@+id/from_picker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/from_picker"
                app:layout_constraintTop_toTopOf="@+id/from_picker" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>